k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: task-management

spec:
  replicas: 3

  selector:
    matchLabels:
      app: task-management

  template:
    metadata:
      labels:
        app: task-management

    spec:
      containers:
        - name: task-management

          image: yeshwanth074/task-management:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - name: cert-volume
              mountPath: /secrets
              readOnly: true
          
      volumes:
        - name: cert-volume
          secret:
            secretName: task-management-cert-secret
