k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-management-service

spec:
  selector:
    app: task-management

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
