k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-management-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: task-management.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: task-management-service

                port:
                  number: 80
